# ndcurves

./: .cirrus.yml  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: macos-linux-pip.yml  release.yml  wheel.yml
python/ndcurves/: CMakeLists.txt
