[project]
name = "ndcurves"
version = "1.1.6"
description = "Library for creating smooth cubic splines"
readme = "README.md"
license= "BSD-3-Clause"
dependencies = ["pin"]

[project.urls]
homepage = "https://github.com/loco-3d/ndcurves"

[tool.black]
exclude = "cmake"

[tool.cmeel]
configure-args = ["-DBUILD_PYTHON_INTERFACE=ON"]

[build-system]
build-backend = "cmeel.build"
requires = [
    "cmeel[build]",
    "cmeel-eigen",
    "cmeel-urdfdom-headers",
    "pin"
    ]
