[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]", "pin[build] >= 2.6.18, < 3"]

[project]
dependencies = ["pin >= 2.6.18, < 3"]
description = "Library for creating smooth cubic splines"
license = "BSD-3-Clause"
name = "ndcurves"
version = "1.3.0"

[project.urls]
homepage = "https://github.com/loco-3d/ndcurves"

[tool.black]
exclude = "cmake"

[tool.cmeel]
configure-args = ["-DBUILD_PYTHON_INTERFACE=ON"]

[tool.tomlsort]
all = true
